# brown-fox

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cc
cmake/: BrownFoxConfig.cmake.in
include/brown-fox/: ears.h  eyes.h  fox.h  legs.h  units.h
packaging/: CMakeLists.txt  Description.txt  License.txt  Welcome.txt
src/: CMakeLists.txt  ears.cc  eyes.cc  fox.cc  legs.cc
tests/: CMakeLists.txt  test-jump.cc
